# concessio

./: .buildconfig  .editorconfig  .gitignore  .prettierrc.json  README.md  concessio.doap  eslint.config.js  io.github.ronniedroid.concessio.yml  meson.build  package-lock.json
data/: io.github.ronniedroid.concessio.data.gresource.xml  io.github.ronniedroid.concessio.desktop  io.github.ronniedroid.concessio.gschema.xml  io.github.ronniedroid.concessio.metainfo.xml  meson.build
data/css/: style.css
data/ui/: BoxedList.ui  Cell.ui  CheckBoxes.ui  Form.ui  Grid.ui  HelpDialog.ui  ShortcutsWindow.ui  Window.ui
po/: LINGUAS  POTFILES  ar.mo  ar.po  cs.po  io.github.ronniedroid.concessio.pot  it.mo  it.po  it_IT.mo  it_IT.po  meson.build  nl.po  pt_BR.po  ru.po
src/: Application.js  BoxedList.js  Cell.js  CheckBoxes.js  Form.js  Grid.js  HelpDialog.js  Window.js  application.js  boxedList.js  form.js  helpDialog.js  io.github.ronniedroid.concessio.js  io.github.ronniedroid.concessio.src.gresource.xml  main.js  window.js
